pulkitchhabra-salesforce/objects/Review__c.object
<CustomObject>
    <description>Represents an interviewer&apos;s assessment of a
particular candidate</description>
    <fields>
        <fullName>Assesment__c</fullName>
        <label>Assesment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>HYPERLINK( Job_Application__r.Candidate__r.Id,Job_Application__r.Candidate__r.First_Name__c  &amp; &quot; &quot;  &amp;  Job_Application__r.Candidate__r.Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Limit</fullName>
        <active>true</active>
        <description>Checks that the rating should not exceed 5 but is equal to or more than 1</description>
        <errorConditionFormula>(Rating__c&gt;5 || Rating__c&lt;1)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating can only be given between 1 and 5 where 1 is the least and 5 is the highest</errorMessage>
    </validationRules>
</CustomObject>